# VTA

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY.md  check.sh  deploy.sh  pnpm-lock.yaml  pyproject.toml
.github/workflows/: build-and-deploy.yml  ci.yml
apps/admin/src/: main.ts
apps/discord-worker/src/: discordAdapter.ts
course_ta_deployer/: __init__.py  builders.py  cli.py  config.py  deployment.py  doctor.py  runner.py
course_ta_deployer/skills/course-ta/: SKILL.md
course_ta_deployer/skills/course-ta/lib/: canvas_api.py  canvas_content.py  canvas_courses.py  canvas_dashboard.py  canvas_lookup.py  canvas_sync.py  discord_counts.py  extract_slides.py  log_interaction.py  paths.py  rate_limit.py  sync_channels.py  ta_preflight.py  ta_send.py
course_ta_deployer/skills/course-ta/references/: admin-flow.md  forwarding.md  maintenance.md  material-routing.md
docs/: external-links.md  linux-server.md
infra/azure/: main.bicep  postgres.bicep
scripts/: security_scan.py
specs/architecture-v2/: tasks.md  verification.md
specs/documentation-overhaul/: tasks.md  verification.md
specs/vta-release/: plan.md  spec.md  tasks.md  verification.md
tests/: helpers.py  test_builders.py  test_config.py  test_deployment.py  test_doctor.py  test_runner.py
